@@ -22,6 +22,12 @@ user-specified classpath.
 
 * <property environment=... /> now works on z/OS.
 
+* forked <javac> failed for the wrong reason on JDK 1.1 - Ant would
+use a temporary file to hold the names of the files to compile under
+some conditons, but 1.1 doesn't support this feature.  Ant will no
+longer try this, but you may run into problems with the length of the
+command line now.
+
 Changes from Ant 1.4.1 to 1.5beta1
 ==================================
 
